--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
@@ -34,7 +33,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://esm.sh/@google/genai"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.22",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.20.0",
+    "ytdl-core": "https://aistudiocdn.com/ytdl-core@^4.11.5"
   }
 }
 </script>
